--- a/resources/bikelane/endpoint/concept/concept.html
+++ b/resources/bikelane/endpoint/concept/concept.html
@@ -6,7 +6,12 @@
     <link rel="stylesheet" href="/css/site.css">
   </head>
   <body>
-    <div id="app"></div>
+    <center>
+      </br>
+      <div id="app1"></div>
+      </br>
+      <div id="app2"></div>
+    </center>
     <script type="text/javascript" src="/js/main.js"></script>
     <script type="text/javascript">
      goog.require("bikelane.main")
